remove white borders from main component

--- a/src/App.css
+++ b/src/App.css
@@ -264,7 +264,7 @@ header {
 }
 
 main {
-    margin: 0 14vw;
+    margin: 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
