--- a/src/App.css
+++ b/src/App.css
@@ -168,53 +168,6 @@ header {
     }
 }
 
-@media (max-width: 770px) {
-    main {
-        margin: 0;
-
-        .banner {
-            margin-bottom: 1rem;
-            height: 11.5rem;
-            width: 100%;
-            border-radius: 0;
-        }
-    }
-
-    header {
-        .header_content {
-            height: 15vw;
-            width: 100%;
-
-            .logo_link {
-                height: 100%;
-                width: 30vw;
-                margin-left: 7vw;
-
-                img {
-                    left: 0;
-                    top: 0;
-                    height: 100%;
-                    width: 30vw;
-                    margin: 0;
-                }
-            }
-
-        }
-
-        .burger_btn {
-            margin-right: 5vw;
-            padding: 2vw;
-            height: 100%;
-            display: block;
-            border: none;
-            background: none;
-        }
-
-        .header_link {
-            display: none;
-        }
-    }
-}
 
 .banner {
     width: 68rem;
@@ -281,24 +234,6 @@ main {
         background-size: cover;
     }
 
-    @media (max-width: 642px) {
-        .articles_background {
-            padding: .4rem 0 2rem 0;
-            background-image: url("/public/articlesBackgroundTall.svg");
-        }
-    }
-
-    @media (max-width: 450px) {
-        .articles_background {
-            padding: 8vw 0 12vw 0;
-            background-image: url("/public/articlesBackgroundTaller.svg");
-
-            .articles_container {
-                padding: 0;
-            }
-
-        }
-    }
 
     .team {
         display: grid;
@@ -390,47 +325,7 @@ main {
             box-shadow: inset 0px 0px 0px .1vw #ffe815;
         }
     }
-
-    @media (max-width: 770px) {
-        .articles_container {
-            max-width: 90vw;
-
-            article {
-                width: 27vw;
-                height: 100%;
-                margin-bottom: .5rem;
-                border-radius: 3vw;
-
-                video {
-                    padding: .5rem 0;
-                    width: 20vw;
-                    height: 20vw;
-                }
-
-                h2 {
-                    margin-top: .2rem;
-                    font-size: 2vw;
-                }
-
-                p {
-                    font-size: 2vw;
-                    width: 80%;
-                    height: 7vw;
-                }
-
-                a {
-                    width: 3vw;
-                    height: 3vw;
-                    align-self: flex-end;
-                    position: relative;
-                    img {
-                        width: 3vw;
-                        height: 3vw;
-                    }
-                }
-            }
-        }
-    }
+}
 
     .posts_container {
         display: flex;
@@ -559,86 +454,6 @@ main {
         }
     }
 
-    @media (max-width: 770px) {
-        .posts_container {
-            .posts_heading {
-                font-size: .6rem;
-                width: 7rem;
-
-            }
-
-            .wide_btn {
-                display: block;
-                width: 60vw;
-            }
-
-            .nonwide_btn {
-                display: none;
-            }
-
-            .posts {
-                width: 100%;
-                gap: 1rem;
-                display: flex;
-                flex-wrap: wrap;
-
-                article {
-                    height: 100%;
-                    border: none;
-                    width: 40vw;
-
-
-                    img {
-                        width: 40vw;
-                        height: 100%;
-                        border-radius: 20px;
-                    }
-
-                    .post_text {
-                        width: 80%;
-                        position: relative;
-                        left: -3vw;
-                        height: auto;
-
-                        .description_container {
-                            display: flex;
-                            width: 120%;
-                            margin-top: .5rem;
-
-                            p {
-                                width: 100%;
-                                font-size: .5rem;
-                            }
-                        }
-
-                        .post_button {
-                            display: none;
-                        }
-
-                        #description_button {
-                            display: block;
-                            width: 1.2vw;
-                            min-width: 12.3px;
-                            min-height: 12.3px;
-                            margin-left: .3rem;
-                            align-self: flex-end;
-
-                            img {
-                                min-height: 12.3px;
-                                min-width: 12.3px;
-                            }
-                        }
-
-                        h2 {
-                            font-size: .6rem;
-                        }
-
-                    }
-
-                }
-            }
-        }
-    }
 
     .videos_container {
         padding: 11vw 0 5vw 0;
@@ -759,79 +574,6 @@ main {
         }
     }
 
-    @media (max-width: 770px) {
-        .videos_container {
-            padding: 20vw 0 10vw 0;
-
-            .nonwide_btn {
-                display: none;
-            }
-
-            .wide_btn {
-                display: block;
-                width: 60vw;
-            }
-
-            .video:nth-child(1),
-            .video:nth-child(2) {
-                width: 80%;
-                flex-direction: column;
-
-                .video-wrapper {
-                    width: 100%;
-                    height: 100%;
-
-                    img:nth-child(1) {
-                        border-radius: 0;
-                        width: 100%;
-                        height: 100%;
-                        left: 0;
-                    }
-
-                    .play-button {
-                        left: 50%;
-                        width: 8vw;
-                    }
-
-                    .video_background {
-                        border-radius: 5vw;
-                        width: 97%;
-                        height: calc(100% + 0vw);
-                        left: .4rem;
-                    }
-                }
-
-                .text_container {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    margin: 1rem 0 0 0rem;
-                    width: 100%;
-                    text-align: center;
-
-                    h2 {
-                        margin-bottom: .0rem;
-                        font-size: 2.7vw;
-                        font-weight: 700;
-                    }
-
-                    p {
-                        margin-top: .2rem;
-                        font-size: 2vw;
-                        width: 100%;
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 770px) {
-    main {
-        margin: 0;
-    }
-}
-
 footer {
     display: flex;
     flex-direction: column;
@@ -890,7 +632,7 @@ footer {
         input {
             width: 20.4rem;
             height: 3rem;
-            border: .3vw solid #91e523;
+            border: .4rem solid #91e523;
             border-radius: 2vw;
             font-size: 1.3rem;
             color: #707070;
@@ -943,7 +685,7 @@ footer {
             transform: translateY(-50%);
             height: 1.2rem;
             width: 1.2rem;
-            border: .25vw solid #91e523;
+            border: .4rem solid #91e523;
             border-radius: .3vw;
         }
 
@@ -998,130 +740,16 @@ footer {
         p {
             width: 10vw;
             font-weight: 500;
-            font-size: .8vw;
+            font-size: 1.2rem;
         }
 
         a {
             color: #707070;
-            font-size: .9vw;
+            font-size: 1.5rem;
             font-weight: 600;
         }
     }
 }
-
-@media (max-width: 770px) {
-    footer {
-        .footer_container {
-            width: 90vw;
-
-            .footer_blocks {
-                justify-content: space-around;
-
-                .footer_content {
-                    margin-top: 1vw;
-                    width: 100%;
-
-                    h1 {
-                        font-size: 3vw;
-                    }
-
-                    p {
-                        width: 115%;
-                        font-size: 2.3vw;
-                    }
-                }
-
-                .email_input {
-                    flex-direction: column;
-                    align-items: flex-start;
-
-                    input {
-                        width: 100%;
-                        height: 5vw;
-                        border: .5vw solid #91e523;
-                        border-radius: 10vw;
-                        padding: .3vw 0 .3vw 3vw;
-                        font-size: 2vw;
-                    }
-
-                    button {
-                        width: 45vw;
-                        height: 6vw;
-                        font-size: 3.2vw;
-                        border-radius: 5vw;
-                        margin: 1vw 0;
-                        box-shadow: none;
-                    }
-                }
-
-                .terms_container {
-                    align-items: center;
-
-                    label {
-                        margin-left: 3.5vw;
-                        font-size: 2.2vw;
-
-                        b {
-                            text-decoration: underline;
-                        }
-                    }
-
-                    span {
-                        width: 2.4vw;
-                        height: 2.5vw;
-                        border: .5vw solid #91e523;
-                        border-radius: 1vw;
-                    }
-
-                    .checkmark:after {
-                        left: .7vw;
-                        top: -.1vw;
-                        width: .9vw;
-                        height: 1.8vw;
-                        border: solid white;
-                        border-width: 0rem .3vw .3vw 0rem;
-                    }
-                }
-
-                .footer_img {
-                    display: none;
-                }
-
-                .footer_img_small {
-                    position: relative;
-                    display: block;
-                    width: 35vw;
-                    height: 40vw;
-                }
-
-
-            }
-
-            .footer_links {
-                margin-left: 0;
-                gap: 0;
-
-                p {
-                    width: 25vw;
-                    font-size: 2vw;
-                    font-weight: 600;
-                }
-
-                a {
-                    width: 25vw;
-                    font-size: 2.2vw;
-                    font-weight: 600;
-                }
-            }
-
-            .green_line {
-                height: .25vw;
-                margin: 1.5vw 0;
-            }
-        }
-    }
-}
-
 
 @media (max-width: 1440px) {
     header {
@@ -1904,5 +1532,364 @@ footer {
                 }
             }
         }
+    }
+}
+
+@media (max-width: 770px) {
+    main {
+        margin: 0;
+
+        .banner {
+            margin-bottom: 1rem;
+            height: 11.5rem;
+            width: 100%;
+            border-radius: 0;
+        }
+    .posts_container {
+        .posts_heading {
+            font-size: .8rem;
+            width: 7rem;
+
+        }
+
+        .wide_btn {
+            display: block;
+            width: 60vw;
+        }
+
+        .nonwide_btn {
+            display: none;
+        }
+
+        .posts {
+            width: 100%;
+            gap: 1rem;
+            display: flex;
+            flex-wrap: wrap;
+
+            article {
+                height: 100%;
+                border: none;
+                width: 40vw;
+
+
+                img {
+                    width: 40vw;
+                    height: 100%;
+                    border-radius: 20px;
+                }
+
+                .post_text {
+                    width: 80%;
+                    position: relative;
+                    left: -3vw;
+                    height: auto;
+
+                    .description_container {
+                        display: flex;
+                        width: 120%;
+                        margin-top: .5rem;
+
+                        p {
+                            width: 100%;
+                            font-size: .5rem;
+                        }
+                    }
+
+                    .post_button {
+                        display: none;
+                    }
+
+                    #description_button {
+                        display: block;
+                        width: 1.2vw;
+                        min-width: 12.3px;
+                        min-height: 12.3px;
+                        margin-left: .3rem;
+                        align-self: flex-end;
+
+                        img {
+                            min-height: 12.3px;
+                            min-width: 12.3px;
+                        }
+                    }
+
+                    h2 {
+                        font-size: .6rem;
+                    }
+
+                }
+
+            }
+        }
+    }
+}
+.articles_background {
+    .articles_container {
+        max-width: 90vw;
+
+        article {
+            width: 27vw;
+            height: 100%;
+            margin-bottom: .5rem;
+            border-radius: 3vw;
+
+            video {
+                padding: .5rem 0;
+            }
+
+            h2 {
+                margin-top: .2rem;
+                font-size: .9rem;
+            }
+
+            p {
+                font-size: 2vw;
+                width: 80%;
+                height: 7vw;
+            }
+
+            a {
+                width: 3vw;
+                height: 3vw;
+                align-self: flex-end;
+                margin-right: 2vw;
+
+                img {
+                    width: 3vw;
+                    height: 3vw;
+                }
+            }
+        }
+    }
+
+}
+    .videos_container {
+        padding: 20vw 0 10vw 0;
+
+        .nonwide_btn {
+            display: none;
+        }
+
+        .wide_btn {
+            display: block;
+            width: 60vw;
+        }
+
+        .video:nth-child(1),
+        .video:nth-child(2) {
+            width: 80%;
+            flex-direction: column;
+
+            .video-wrapper {
+                width: 100%;
+                height: 100%;
+
+                img:nth-child(1) {
+                    border-radius: 0;
+                    width: 100%;
+                    height: 100%;
+                    left: 0;
+                }
+
+                .play-button {
+                    left: 50%;
+                    width: 8vw;
+                }
+
+                .video_background {
+                    border-radius: 5vw;
+                    width: 97%;
+                    height: calc(100% + 0vw);
+                    left: .4rem;
+                }
+            }
+
+            .text_container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin: 1rem 0 0 0rem;
+                width: 100%;
+                text-align: center;
+
+                h2 {
+                    margin-bottom: .0rem;
+                    font-size: 2.7vw;
+                    font-weight: 700;
+                }
+
+                p {
+                    margin-top: .2rem;
+                    font-size: 2vw;
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+    header {
+        .header_content {
+            height: 15vw;
+            width: 100%;
+
+            .logo_link {
+                height: 100%;
+                width: 30vw;
+                margin-left: 7vw;
+
+                img {
+                    left: 0;
+                    top: 0;
+                    height: 100%;
+                    width: 30vw;
+                    margin: 0;
+                }
+            }
+
+        }
+
+        .burger_btn {
+            margin-right: 5vw;
+            padding: 2vw;
+            height: 100%;
+            display: block;
+            border: none;
+            background: none;
+        }
+
+        .header_link {
+            display: none;
+        }
+    }
+
+    footer {
+        .footer_container {
+            width: 90vw;
+
+            .footer_blocks {
+                justify-content: space-around;
+
+                .footer_content {
+                    margin-top: 1vw;
+                    width: 100%;
+
+                    h1 {
+                        font-size: 3vw;
+                    }
+
+                    p {
+                        width: 115%;
+                        font-size: 2.3vw;
+                    }
+                }
+
+                .email_input {
+                    flex-direction: column;
+                    align-items: flex-start;
+
+                    input {
+                        width: 100%;
+                        height: 5vw;
+                        border: .5vw solid #91e523;
+                        border-radius: 10vw;
+                        padding: .3vw 0 .3vw 3vw;
+                        font-size: 2vw;
+                    }
+
+                    button {
+                        width: 45vw;
+                        height: 6vw;
+                        font-size: 3.2vw;
+                        border-radius: 5vw;
+                        margin: 1vw 0;
+                        box-shadow: none;
+                    }
+                }
+
+                .terms_container {
+                    align-items: center;
+
+                    label {
+                        margin-left: 3.5vw;
+                        font-size: 2.2vw;
+
+                        b {
+                            text-decoration: underline;
+                        }
+                    }
+
+                    span {
+                        width: 2.4vw;
+                        height: 2.5vw;
+                        border: .5vw solid #91e523;
+                        border-radius: 1vw;
+                    }
+
+                    .checkmark:after {
+                        left: .7vw;
+                        top: -.1vw;
+                        width: .9vw;
+                        height: 1.8vw;
+                        border: solid white;
+                        border-width: 0rem .3vw .3vw 0rem;
+                    }
+                }
+
+                .footer_img {
+                    display: none;
+                }
+
+                .footer_img_small {
+                    position: relative;
+                    display: block;
+                    width: 35vw;
+                    height: 40vw;
+                }
+
+
+            }
+
+            .footer_links {
+                margin-left: 0;
+                gap: 0;
+
+                p {
+                    width: 25vw;
+                    font-size: 2vw;
+                    font-weight: 600;
+                }
+
+                a {
+                    width: 25vw;
+                    font-size: 2.2vw;
+                    font-weight: 600;
+                }
+            }
+
+            .green_line {
+                height: .25vw;
+                margin: 1.5vw 0;
+            }
+        }
+    }
+}
+
+@media (max-width: 642px) {
+    .articles_background {
+        padding: .4rem 0 2rem 0;
+        background-image: url("/public/articlesBackgroundTall.svg");
+    }
+}
+
+@media (max-width: 450px) {
+    .articles_background {
+        padding: 8vw 0 12vw 0;
+        background-image: url("/public/articlesBackgroundTaller.svg");
+
+        .articles_container {
+            padding: 0;
+        }
+
     }
 }
