--- a/src/App.css
+++ b/src/App.css
@@ -923,6 +923,16 @@ footer {
     footer {
         padding-top: 4rem;
 
+        .footer_links {
+            p {
+                font-size: .9rem;
+                width: auto;
+            }
+            a {
+                font-size: 1rem;
+            }
+        }
+
         .footer_content {
             position: relative;
             left: 3.5rem;
@@ -965,8 +975,10 @@ footer {
                 span {
                     width: .8rem;
                     height: .8rem;
+                    border: .3rem solid #91e523;
                 }
             }
+
         }
 
         .footer_img {
@@ -1161,6 +1173,16 @@ footer {
     footer {
         padding-top: 3.7rem;
 
+        .footer_links {
+            p {
+                font-size: .6rem;
+                width: auto;
+            }
+            a {
+                font-size: .7rem;
+            }
+        }
+
         .footer_content {
             position: relative;
             left: 0;
@@ -1202,6 +1224,7 @@ footer {
                 span {
                     width: .7rem;
                     height: .7rem;
+                    border: .2rem solid #91e523;
                 }
             }
         }
@@ -1404,6 +1427,15 @@ footer {
 
     footer {
         padding-top: 3rem;
+        .footer_links {
+            p {
+                font-size: .5rem;
+                width: auto;
+            }
+            a {
+                font-size: .6rem;
+            }
+        }
 
         .footer_content {
             position: relative;
