fix the footer for large screens

--- a/src/App.css
+++ b/src/App.css
@@ -632,7 +632,7 @@ footer {
         input {
             width: 20.4rem;
             height: 3rem;
-            border: .4rem solid #91e523;
+            border: .3rem solid #91e523;
             border-radius: 2vw;
             font-size: 1.3rem;
             color: #707070;
@@ -685,7 +685,7 @@ footer {
             transform: translateY(-50%);
             height: 1.2rem;
             width: 1.2rem;
-            border: .4rem solid #91e523;
+            border: .3rem solid #91e523;
             border-radius: .3vw;
         }
 
@@ -731,6 +731,7 @@ footer {
     }
 
     .footer_links {
+        width: 40rem;
         align-self: flex-start;
         display: flex;
         flex-direction: row;
@@ -738,14 +739,15 @@ footer {
         gap: 1vw;
 
         p {
-            width: 10vw;
+            width: 15rem;
             font-weight: 500;
             font-size: 1.2rem;
         }
 
         a {
+            width: 20rem;
             color: #707070;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             font-weight: 600;
         }
     }
